--- a/prebuilt/etc/hijack-boot/newboot/init.mapphone_cdma.rc
+++ b/prebuilt/etc/hijack-boot/newboot/init.mapphone_cdma.rc
@@ -12,7 +12,6 @@ on post-fs
 # Backward compatibility
     symlink /dev /dev/netmux
     symlink /dev/ttyGS0 /dev/acm0
-    symlink /dev/hp3a-omap /dev/hp3A-omap
 
     mount rootfs rootfs / rw remount
 
@@ -37,31 +36,24 @@ on post-fs
     chmod 0755 /mnt/obb
 
 # Configure kernel options
-    # Enable automatic power control for EHCI USB IPC
-    write /sys/devices/platform/ehci-omap.0/usb1/power/level auto
-    write /sys/devices/platform/ehci-omap.0/usb1/power/autosuspend 0
-    write /sys/devices/platform/ehci-omap.0/usb1/1-3/power/level auto
-    write /sys/devices/platform/ehci-omap.0/usb1/1-3/power/autosuspend 0
     # Disable a system-wide task dump on OOM in default
     write /proc/sys/vm/oom_dump_tasks 0
     write /proc/sys/fs/suid_dumpable 2
     # Power Management
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor ondemand
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 300000
-    write /sys/devices/system/cpu/cpu0/cpufreq/ondemand/up_threshold 86
-    write /sys/devices/system/cpu/cpu0/cpufreq/ondemand/sampling_rate 46875
-    write /sys/power/sr_vdd1_autocomp 1
+#    write /sys/devices/system/cpu/cpu0/cpufreq/ondemand/up_threshold 86
+#    write /sys/devices/system/cpu/cpu0/cpufreq/ondemand/sampling_rate 46875
+#    write /sys/power/sr_vdd1_autocomp 1
     write /sys/power/sr_vdd2_autocomp 1
 # Change ownership for vibrators
     chown system system /sys/class/timed_output/vibrator/enable
-    chown system system /sys/class/timed_output/vibrator/sweep
     chmod 0660 /sys/class/timed_output/vibrator/enable
-    chmod 0660 /sys/class/timed_output/vibrator/sweep
 
 # Mount mtd partitions
     # mount /pds as r/w
     # We chown/chmod /pds again so because mount is run as root + defaults
-    mount yaffs2 mtd@pds /pds nosuid nodev no-checkpoint
+#    mount yaffs2 mtd@pds /pds nosuid nodev no-checkpoint
     mount ext3 /dev/block/mmcblk1p7 /pds nosuid nodev noatime nodiratime
     chown system system /pds
     chmod 0775 /pds
@@ -79,8 +71,8 @@ on post-fs
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/state
     chmod 0660 /sys/class/rfkill/rfkill0/state
-    chown bluetooth bluetooth /sys/class/rfkill/rfkill1/type
-    chown bluetooth bluetooth /sys/class/rfkill/rfkill1/state
+    chown bluetooth.bluetooth /sys/class/rfkill/rfkill1/type
+    chown bluetooth.bluetooth /sys/class/rfkill/rfkill1/state
     chmod 0660 /sys/class/rfkill/rfkill1/state
 
 # Dont delete this line, used as event in bootmenu (cpu settings & postbootmenu)
@@ -90,19 +82,19 @@ on post-fs
     write /dev/usb_device_mode charge_adb
     write /tmp/usbd_current_state usb_mode_charge_adb
     chmod 0666 /tmp/usbd_current_state
-    
+
     # following two dirs are for storing BP Flex and PDS files. NVM Daemon is using these folders
     mkdir /data/bp_nvm
     chown radio radio /data/bp_nvm
     chmod 0770 /data/bp_nvm
     mkdir /pds/bp_nvm
     chown radio radio /pds/bp_nvm
-    chmod 0770 /pds/bp_nvm    
-    
+    chmod 0770 /pds/bp_nvm
+
     # Tweaks
     write /sys/block/mmcblk0/bdi/read_ahead_kb 2048
 
-    mount rootfs rootfs / ro remount
+#    mount rootfs rootfs / ro remount
 
     # create logger folder
     mkdir /data/logger 0770 radio log
@@ -168,7 +160,7 @@ on post-fs-data
     chown system system /data/tpapi/etc/tpa/persistent
 
     # copy hostapd configuration
-    copy /system/etc/wifi/softap/hostapd.conf /data/misc/wifi/hostapd.conf
+#    copy /system/etc/wifi/softap/hostapd.conf /data/misc/wifi/hostapd.conf
 
     setprop vold.post_fs_data_done 1
 
@@ -182,7 +174,7 @@ on init
 
     # Temp workaround for HP library cleanup
     symlink /dev/hp3a-omap /dev/hp3A-omap
-    
+
     # Permissions for video
     chmod 0770 /dev/hp3a-omap
     chmod 0770 /dev/hplens-omap
@@ -221,9 +213,6 @@ on boot
     # Enable panic on softlockup
     write /proc/sys/kernel/softlockup_panic 1
 
-    setprop ro.build.product shadow
-    setprop ro.product.device shadow
-
 # Define Motorola DBVC ATVC Property defaults (failsafe properties)
     setprop ro.sys.atvc_allow_netmon_usb 0
     setprop ro.sys.atvc_allow_netmon_ih 0
@@ -245,11 +234,9 @@ on boot
     chown system system /sys/class/leds/red/brightness
     chown system system /sys/class/leds/green/brightness
     chown system system /sys/class/leds/blue/brightness
-    chown system system /sys/class/leds/usb/brightness
     chown system system /sys/class/leds/torch-flash/camera_strobe
     chown system system /sys/class/leds/torch-flash/flash_light
     chown system system /sys/class/leds/spotlight/brightness
-    chown system system /sys/class/leds/af-led/brightness
     chmod 0660 /sys/class/leds/lcd-backlight/brightness
     chmod 0660 /sys/class/leds/keyboard-backlight/brightness
     chmod 0660 /sys/class/leds/button-backlight/brightness
@@ -257,7 +244,6 @@ on boot
     chmod 0660 /sys/class/leds/red/brightness
     chmod 0660 /sys/class/leds/green/brightness
     chmod 0660 /sys/class/leds/blue/brightness
-    chmod 0660 /sys/class/leds/usb/brightness
     chmod 0660 /sys/class/leds/torch-flash/camera_strobe
     chmod 0660 /sys/class/leds/torch-flash/flash_light
     chmod 0666 /sys/class/leds/spotlight/brightness
@@ -303,15 +289,14 @@ on boot
 # The properties introduced by moto
 
 # Charge only mode services
-   exec /system/bin/mot_boot_mode
 on property:sys.chargeonly.mode=1
-    start battd
     start console
-    write /data/simpin lock
-    exec /system/bin/charge_only_mode
-    stop /system/bin/bootanimation
-    pkill /system/bin/surfaceflinger
-    exec /system/bin/stop zygote
+    class_reset main
+    class_reset late_start
+    class_start charger
+    start battd
+    start chargeonly
+    stop zygote
 
 # Moto safe power down
 on property:sys.reboot=1
@@ -367,15 +352,16 @@ service start_commdrv /system/bin/sh /system/etc/motorola/comm_drv/commdrv_fs.sh
     user radio
     group radio system cache
 
+service chargeonly system/bin/charge_only_mode
+    group root
+    oneshot
+    disabled
+
 service battd /system/bin/battd
     class main
     socket battdsock stream 660 root system
     user root
     group system
-    oneshot
-service ssmgrd /system/bin/ssmgrd
-    class main
-    group radio input system
     oneshot
 
 # Bluetooth services.
