--- a/prebuilt/etc/hijack-boot/newboot/init.mapphone_cdma.rc
+++ b/prebuilt/etc/hijack-boot/newboot/init.mapphone_cdma.rc
@@ -235,8 +235,8 @@ on boot
     chown system system /sys/class/leds/green/brightness
     chown system system /sys/class/leds/blue/brightness
     chown system system /sys/class/leds/torch-flash/camera_strobe
-    chown system system /sys/class/leds/torch-flash/flash_light
-    chown system system /sys/class/leds/spotlight/brightness
+    chown media system /sys/class/leds/torch-flash/flash_light
+    chown media system /sys/class/leds/spotlight/brightness
     chmod 0660 /sys/class/leds/lcd-backlight/brightness
     chmod 0660 /sys/class/leds/keyboard-backlight/brightness
     chmod 0660 /sys/class/leds/button-backlight/brightness
