--- a/prebuilt/etc/hijack-boot/newboot/ueventd.rc
+++ b/prebuilt/etc/hijack-boot/newboot/ueventd.rc
@@ -7,6 +7,7 @@
 /dev/urandom              0666   root       root
 /dev/ashmem               0666   root       root
 /dev/binder               0666   root       root
+/dev/ion                  0666   media      graphics
 
 # logger should be world writable (for logging) but not readable
 /dev/log/*                0662   root       log
@@ -17,7 +18,7 @@
 /dev/ttyGS0               0660   root       system
 /dev/uinput               0660   system     bluetooth
 /dev/alarm                0664   system     radio
-/dev/graphics/*           0660   root       graphics
+/dev/graphics/*           0660   media      graphics
 /dev/input/*              0660   root       input
 /dev/snd/*                0664   system     audio
 /dev/mt9t013              0660   system     system
@@ -66,10 +67,10 @@
 /dev/cpcap_batt           0660   root       system
 /dev/cpcap_mot_rtc        0660   root       system
 /dev/cpcap_uc             0660   root       system
-/dev/camera0              0777   root       root
+/dev/camera0              0666   media      camera
 /dev/i2c-1                0660   root       system
 /dev/i2c-2                0660   root       system
-/dev/i2c-3                0660   root       camera
+/dev/i2c-3                0660   media      camera
 /dev/pvrsrvkm             0666   system     graphics
 /dev/netmon               0660   root       radio
 /dev/block/mmcblk0p1      0660   root       sdcard_rw
