--- a/prebuilt/etc/hijack-boot/newboot/init.mapphone_cdma.rc
+++ b/prebuilt/etc/hijack-boot/newboot/init.mapphone_cdma.rc
@@ -41,7 +41,7 @@ on post-fs
     write /proc/sys/fs/suid_dumpable 2
     # Power Management
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor ondemand
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 300000
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 250000
     write /sys/devices/system/cpu/cpu0/cpufreq/ondemand/up_threshold 86
     write /sys/devices/system/cpu/cpu0/cpufreq/ondemand/sampling_rate 46875
     write /sys/power/sr_vdd1_autocomp 1
@@ -248,6 +248,9 @@ on boot
     chmod 0660 /sys/class/leds/torch-flash/flash_light
     chmod 0666 /sys/class/leds/spotlight/brightness
 
+# Kernel symbol hook
+    insmod /system/lib/modules/symsearch.ko
+
 # Load traffic shaping modules
     insmod /system/lib/modules/ifb.ko
     insmod /system/lib/modules/act_mirred.ko
@@ -260,20 +263,17 @@ on boot
 # Load Authentec VPN kernel module
     insmod /system/lib/modules/vpnclient.ko
 
-# Install kernel modules
+# Load modem modules
     insmod /system/lib/modules/netmux.ko
     insmod /system/lib/modules/netmux_linkdriver.ko
     insmod /system/lib/modules/modem_pm_driver.ko
 
+# Load firewall modules
     insmod /system/lib/modules/xt_multiport.ko
     insmod /system/lib/modules/xt_quota2.ko
     insmod /system/lib/modules/xt_owner2.ko
-
-#    insmod /system/lib/modules/tun.ko
-#    insmod /system/lib/modules/symsearch.ko
-#    insmod /system/lib/modules/mmcfix.ko
-#    insmod /system/lib/modules/usbled.ko
-#    insmod /system/lib/modules/gpiofix.ko
+    insmod /system/lib/modules/ip6_tables.ko
+    insmod /system/lib/modules/ip6table_filter.ko
 
 # Cifs module is actually not compiled by us
 #    insmod /system/lib/modules/nls_utf8.ko
@@ -356,12 +356,7 @@ service battd /system/bin/battd
     class main
     socket battdsock stream 660 root system
     user root
-    group system
-    oneshot
-
-service ssmgrd /system/bin/ssmgrd
-    class main
-    group radio input system
+    group system 9001
     oneshot
 
 # Bluetooth services.
