Updates from cm9-d2g

--- a/hijack-boot/newboot/init.mapphone_cdma.rc
+++ b/hijack-boot/newboot/init.mapphone_cdma.rc
@@ -1,6 +1,5 @@
 on fs
-
-# Mount mmc partitions
+    # Mount mmc partitions
     mkdir /pds 0775 system system
     mount ext3 /dev/block/mmcblk1p21 /system noatime nodiratime
     mount ext3 /dev/block/mmcblk1p21 /system ro remount
@@ -8,34 +7,32 @@ on fs
     mount ext3 /dev/block/mmcblk1p24 /data nosuid nodev noatime nodiratime barrier=0
 
 on post-fs
-
-# Backward compatibility
+    # Backward compatibility
     symlink /dev /dev/netmux
     symlink /dev/ttyGS0 /dev/acm0
-
     mount rootfs rootfs / rw remount
 
-# Busybox
+    # Busybox
     export HISTFILE /data/local/tmp/.ash_history
     export HISTFILESIZE 1000
     export ENV /system/etc/profile
 
-# Other global env variables
+    # Other global env variables
     export DSP_PATH /system/lib/dsp
 
-# Mount tmp, we dont have swap, use ramfs which can grow if required
+    # Mount tmp, we dont have swap, use ramfs which can grow if required
     mkdir /tmp
     mount ramfs ramfs /tmp size=512k relatime
     chmod 0777 /tmp
     chown system shell /tmp
 
-# Restore good uid, mount as ramfs reset to root root 755
+    # Restore good uid, mount as ramfs reset to root root 755
     chown root system /mnt/asec
     chmod 0755 /mnt/asec
     chown root system /mnt/obb
     chmod 0755 /mnt/obb
 
-# Configure kernel options
+    # Configure kernel options
     # Disable a system-wide task dump on OOM in default
     write /proc/sys/vm/oom_dump_tasks 0
     write /proc/sys/fs/suid_dumpable 2
@@ -46,14 +43,11 @@ on post-fs
     write /sys/devices/system/cpu/cpu0/cpufreq/ondemand/sampling_rate 37500
     write /sys/power/sr_vdd1_autocomp 1
     write /sys/power/sr_vdd2_autocomp 1
-# Change ownership for vibrators
+    # Change ownership for vibrators
     chown system system /sys/class/timed_output/vibrator/enable
     chmod 0660 /sys/class/timed_output/vibrator/enable
 
-# Mount mtd partitions
-    # mount /pds as r/w
-    # We chown/chmod /pds again so because mount is run as root + defaults
-#    mount yaffs2 mtd@pds /pds nosuid nodev no-checkpoint
+    # Mount mtd partitions
     mount ext3 /dev/block/mmcblk1p7 /pds nosuid nodev noatime nodiratime
     chown system system /pds
     chmod 0775 /pds
@@ -61,13 +55,13 @@ on post-fs
     chown system shell /pds/public
     chmod 0775 /pds/public
 
-# Mount preinstall partition
+    # Mount preinstall partition
     mkdir /preinstall 0771 system system
     mount ext3 /dev/block/mmcblk1p23 /preinstall nosuid nodev noatime nodiratime
     chmod 0771 /preinstall
     chown system system /preinstall
 
-# bluetooth power up/down interface (wl127x Bluetooth and hci0)
+    # bluetooth power up/down interface (wl127x Bluetooth and hci0)
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/state
     chmod 0660 /sys/class/rfkill/rfkill0/state
@@ -75,13 +69,8 @@ on post-fs
     chown bluetooth bluetooth /sys/class/rfkill/rfkill1/state
     chmod 0660 /sys/class/rfkill/rfkill1/state
 
-# Dont delete this line, used as event in bootmenu (cpu settings & postbootmenu)
+    # Dont delete this line, used as event in bootmenu (cpu settings & postbootmenu)
     exec /system/bin/logwrapper postbootmenu
-
-    # Enable ADB mode (made in init.d)
-    write /dev/usb_device_mode charge_adb
-    write /tmp/usbd_current_state usb_mode_charge_adb
-    chmod 0666 /tmp/usbd_current_state
 
     # following two dirs are for storing BP Flex and PDS files. NVM Daemon is using these folders
     mkdir /data/bp_nvm
@@ -90,8 +79,6 @@ on post-fs
     mkdir /pds/bp_nvm
     chown radio radio /pds/bp_nvm
     chmod 0770 /pds/bp_nvm
-
-#    mount rootfs rootfs / ro remount
 
     # create logger folder
     mkdir /data/logger 0770 radio log
@@ -102,7 +89,7 @@ on post-fs
     chmod 0777 /data/panicreports
 
 on post-fs-data
-# Create basic filesystem structure
+    # Create basic filesystem structure
     # we chown/chmod /pds again so because mount is run as root + defaults
     mkdir /pds/lost+found
     chown system shell /pds/public
@@ -127,7 +114,7 @@ on post-fs-data
     # create location directory
     mkdir /data/location 0771 radio radio
 
-# usbd permissions
+    # usbd permissions
     mkdir /data/usbd 0777 system system
 
     # Create anr directory and change permission to 777 to save trace.txt
@@ -204,12 +191,18 @@ on init
     chmod 0666 /dev/ttyGS0
     chmod 0660 /dev/tcmd_driver
 
-on boot
+on charger
+    start console
+    start battd
+    write /data/simpin lock
+    start charge
+    stop zygote
 
+on boot
     # Enable panic on softlockup
     write /proc/sys/kernel/softlockup_panic 1
 
-# Define Motorola DBVC ATVC Property defaults (failsafe properties)
+    # Define Motorola DBVC ATVC Property defaults (failsafe properties)
     setprop ro.sys.atvc_allow_netmon_usb 0
     setprop ro.sys.atvc_allow_netmon_ih 0
     setprop ro.sys.atvc_allow_res_core 0
@@ -244,8 +237,21 @@ on boot
     chmod 0660 /sys/class/leds/torch-flash/flash_light
     chmod 0666 /sys/class/leds/spotlight/brightness
 
-# Kernel modules
+    # Core
     insmod /system/lib/modules/symsearch.ko
+    insmod /system/lib/modules/thumbee.ko
+
+    # Graphics
+    insmod /system/lib/modules/pvroff.ko pvrmajor=248
+    write /sys/devices/platform/omapdss/overlay0/enabled 0
+    write /sys/devices/platform/omapfb/graphics/fb0/size 4194304
+    write /sys/devices/platform/omapdss/overlay0/enabled 1
+    insmod /system/lib/modules/pvrsrvkm.ko
+    insmod /system/lib/modules/omaplfb.ko
+    chmod 0666 /dev/pvrsrvkm
+    exec /system/bin/pvrsrvinit
+
+    # Net
     insmod /system/lib/modules/ifb.ko
     insmod /system/lib/modules/act_mirred.ko
     insmod /system/lib/modules/sch_ingress.ko
@@ -268,19 +274,20 @@ on boot
     insmod /system/lib/modules/ip6table_raw.ko
     insmod /system/lib/modules/ip6t_REJECT.ko
     insmod /system/lib/modules/ip6t_LOG.ko
+
+    # Filesystem
+    insmod /system/lib/modules/jbd2.ko
+    insmod /system/lib/modules/ext4.ko
     insmod /system/lib/modules/sio-iosched.ko
 
-# Set core max size (2G)
-    setrlimit 4 2147483648 2147483648
-
-# The properties introduced by moto
+    # Charge only mode services.
+    exec /system/bin/mot_boot_mode
 
 # Charge only mode services
 on property:sys.chargeonly.mode=1
-    start battd
-    start console
-    write /data/simpin lock
-    exec /system/bin/charge_only_mod
+    class_reset main
+    class_reset late_start
+    class_start charger
 
 # Moto safe power down
 on property:sys.reboot=1
@@ -297,23 +304,19 @@ on property:init.svc.wpa_supplicant=stopped
 # Adb over Network
 on property:service.adb.tcp.port=5555
     restart adbd
+
 on property:service.adb.tcp.port=-1
     restart adbd
 
-# Adb ICS
-#on property:persist.sys.usb.config=*
-#    setprop sys.usb.config $persist.sys.usb.config
 on property:sys.usb.config=mass_storage,adb
-    # Made by usbd, but could be usefull later..
-    # write /sys/devices/virtual/usb_composite/adb/enable 0
-    # write /dev/usb_device_mode msc_adb
-    # write /tmp/usbd_current_state usb_mode_msc_adb
-    # write /sys/devices/virtual/usb_composite/adb/enable 1
     start adbd
+
 on property:sys.usb.config=mtp,adb
     start adbd
+
 on property:sys.usb.config=ptp,adb
     start adbd
+
 on property:service.adb.root=1
     write /sys/devices/virtual/usb_composite/adb/enable 0
     restart adbd
@@ -337,7 +340,7 @@ service start_commdrv /system/bin/sh /system/etc/motorola/comm_drv/commdrv_fs.sh
     user radio
     group radio system cache
 
-service chargeonly system/bin/charge_only_mode
+service charge system/bin/charge_only_mode
     group root
     oneshot
     disabled
@@ -422,7 +425,7 @@ service iprenew_tiwlan0 /system/bin/dhcpcd -n
     disabled
     oneshot
 
-service baseimage /system/bin/dspexec -T /system/lib/dsp/baseimage.dof
+service baseimage /system/bin/cexec.out -T /system/lib/dsp/baseimage.dof
     class main
     user media
     group media graphics
@@ -434,15 +437,8 @@ service fmradio /system/bin/fmradioserver
     user system
     group bluetooth net_bt_admin net_raw net_admin misc
 
-service pvrsrvinit /system/bin/pvrsrvinit
-    class core
-    user root
-    group root
-    oneshot
-
 on property:dev.bootcomplete=1
     start savebpver
-#    start loadpreinstalls
 
 #get BP version and save to misc
 service savebpver /system/bin/SaveBPVer
